--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://localhost:3306/springbootdemo
+spring.jpa.hibernate.ddl-auto=update
+# hiberbate tự động cập nhật vào entity model vào database
+#spring.jpa.show-sql=true
 
